# solar-report-utils

./: .gitignore  README.md  pyproject.toml
src/solar_report_utils/: __init__.py  config.py  exceptions.py  logging.py  s3.py
tests/: test_solar_report_utils.py
